<resources>
    <string name="app_name">Prix Pharma CRM</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_profile">Profile</string>
    <string name="get_started">Get Started</string>
    <string name="keep_me_sign_in">Keep me sign in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="competitor_s_product">Competitor\'s Product</string>
    <string name="competitor_s_company">Competitor\'s Company</string>
    <string name="submit">Submit</string>
    <string name="product_s_composition">Product\'s Composition</string>
    <string name="product_s_opinion">Product\'s Opinion</string>
    <string name="competitor_s_price">Competitor\'s Price</string>
    <string name="competitor_s_data">Competitor\'s Data</string>
    <string name="order_required">Order Required</string>
    <string name="distributor_s_name">Distributor\'s Name</string>
    <string name="required_quantity">Required Quantity</string>
    <string name="dd_mm_yy">dd / mm / yy</string>
    <string name="required_product">Required Product</string>
    <string name="mm_hh">mm : hh</string>
    <string name="login">Login</string>
    <string name="status_code_sent" />
    <string name="status_verification_failed" />
    <string name="status_verification_succeeded" />
    <string name="instant_validation" />
    <string name="status_sign_in_failed" />
    <string name="signed_out" />
    <string name="firebase_status_fmt" />
    <string name="signed_in" />

</resources>
