<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Activities.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="11">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginTop="100dp"
            android:textColor="#000"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/loginedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColor="#000"
            app:met_floatingLabelText="Email"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_underlineColor="@color/colorPrimary"
            android:singleLine="true"
            android:drawableStart="@drawable/elog"
            android:padding="10dp">
    </com.rengwuxian.materialedittext.MaterialEditText>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:met_primaryColor="@color/colorPrimary"-->
<!--            app:met_underlineColor="@color/colorPrimary"-->
<!--            android:layout_marginTop="30dp">-->
<!--            <EditText-->
<!--                android:id="@+id/loginedit"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawableLeft="@drawable/per"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:hint="Email" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:ems="20"
        app:passwordToggleEnabled="true"
        app:met_floatingLabelText="Password"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_underlineColor="@color/colorPrimary"
        android:singleLine="true"
        android:padding="10dp"
        android:textSize="20sp" >
    </com.rengwuxian.materialedittext.MaterialEditText>

        <CheckBox
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="150dp"
            android:padding="10dp"
            android:text="@string/keep_me_sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="-39dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#304FFE" />

    <Button
        android:id="@+id/btnlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:background="@drawable/ripple"
        android:layout_marginTop="170dp"
        />
    </LinearLayout>


</LinearLayout>