<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CompetitorsFragment"
    android:background="@color/backgroundColor">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginBottom="15dp"
           android:orientation="vertical"
           android:paddingLeft="10dp"
           android:paddingTop="10dp"
           android:paddingRight="10dp"
           android:paddingBottom="10dp"
           android:weightSum="11">

            <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardCornerRadius="2dp"
               app:cardElevation="2dp"
               app:cardPreventCornerOverlap="false"
               app:contentPadding="0dp"
               android:layout_marginTop="15dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/competitor_s_data"
                   android:textAlignment="center"
                   android:textColor="#000"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:padding="10dp"/>

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="Product"
                   android:layout_marginTop="47dp"
                   android:padding="10dp"
                   android:singleLine="true"
                   android:textColor="#000"
                   app:met_floatingLabel="highlight"
                   app:met_floatingLabelText="Competitor's Product"
                   app:met_primaryColor="@color/colorPrimary"
                   app:met_underlineColor="@color/colorPrimary" />

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="Company"
                   android:padding="10dp"
                   android:singleLine="true"
                   android:textColor="#000"
                   android:layout_marginTop="124dp"
                   app:met_floatingLabel="highlight"
                   app:met_floatingLabelText="Company"
                   app:met_primaryColor="@color/colorPrimary"
                   app:met_underlineColor="@color/colorPrimary" />

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:baselineAligned="false"
                   android:hint="Price"
                   android:padding="10dp"
                   android:singleLine="true"
                   android:layout_marginTop="203dp"
                   android:textColor="#000"
                   app:met_floatingLabel="highlight"
                   app:met_floatingLabelText="Price"
                   app:met_primaryColor="@color/colorPrimary"
                   app:met_underlineColor="@color/colorPrimary" />

           </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:contentPadding="0dp"
                android:layout_marginTop="15dp">

            </androidx.cardview.widget.CardView>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="30dp"
               android:text="@string/product_s_opinion"
               android:textAlignment="center"
               android:textColor="#000"
               android:textSize="20sp"
               android:textStyle="bold"
               android:padding="10dp"/>

           <com.rengwuxian.materialedittext.MaterialEditText
               android:layout_width="match_parent"
               android:layout_height="150dp"
               android:textColor="#000"
               android:singleLine="false"
               android:inputType="textMultiLine"
               app:met_floatingLabel="highlight"
               app:met_primaryColor="@color/colorPrimary"
               app:met_underlineColor="@color/colorPrimary"
               android:padding="2dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="30dp"
               android:text="@string/product_s_composition"
               android:textAlignment="center"
               android:textColor="#000"
               android:textSize="20sp"
               android:textStyle="bold" />

           <com.rengwuxian.materialedittext.MaterialEditText
               android:layout_width="match_parent"
               android:layout_height="150dp"
               android:textColor="#000"
               android:singleLine="false"
               android:inputType="textMultiLine"
               app:met_floatingLabel="highlight"
               app:met_primaryColor="@color/colorPrimary"
               app:met_underlineColor="@color/colorPrimary"
               android:padding="2dp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="125dp"
               android:layout_marginTop="30dp"
               android:layout_marginRight="125dp"
               android:background="@drawable/ripple"
               android:text="@string/submit"
               android:textAllCaps="false"
               android:textColor="#fff"
               android:textSize="20sp" />

       </LinearLayout>

    </ScrollView>


</FrameLayout>