<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.SalesFragment"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="11">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_required"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/TextColor"
                    app:met_floatingLabelText="Product"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:layout_marginTop="45dp"
                    android:hint="@string/required_product"
                    android:padding="10dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="127dp"
                    android:textColor="@color/TextColor"
                    app:met_floatingLabelText="Packaging"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:hint="Required Packaging"
                    android:padding="10dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="208dp"
                    android:textColor="@color/TextColor"
                    app:met_floatingLabelText="Quantity"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:hint="Required Quantity"
                    android:padding="10dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="277dp"
                    android:textColor="@color/TextColor"
                    app:met_floatingLabelText="@string/distributor_s_name"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:hint="@string/distributor_s_name"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date of Order"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:hint="DD / MM / YY"
                    android:padding="10dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Time of Order"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57dp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:hint="HH : MM"
                    android:padding="10dp"/>

            </androidx.cardview.widget.CardView>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="125dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ripple"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>